--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "bluebird": "^3.5.1",
     "config": "^1.28.1",
     "debug": "^3.1.0",
-    "neeo-sdk": "github:NEEOInc/neeo-sdk#next",
+    "neeo-sdk": "^0.50.5",
     "net": "^1.0.2",
     "node-ssdp": "^3.2.5",
     "xml2js": "^0.4.19"
